--- a/src/main.css
+++ b/src/main.css
@@ -355,7 +355,7 @@ h1{
     content: '';
     position: absolute;
     right: 104%;
-    top: -5px;
+    top: 0;
     background-image: none;
     background-repeat: no-repeat;
     background-size: cover;
